deploy-files/deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-multi-container-service
spec:
  selector:
    app: my-multi-container-pod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-multi-container-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-multi-container-pod
  template:
    metadata:
      labels:
        app: my-multi-container-pod
    spec:
      containers:
        - name: nginx-container
          image: registry.gitlab.com/yassenfouadanis/images/nginx-all:latest
          ports:
            - containerPort: 80
        - name: mysql-container
          image: registry.gitlab.com/yassenfouadanis/images/mysql:8.0.34-debian
